implementing model schemas for bar & liked bar and web scraped bars for in the database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
    <article>
 
       <figure>
-         <h2>Vind jouw perfecte paar schoenen</h2>
+         <h2>Lijst met jou favoriete kroegen</h2>
 
          <a href="/explore"><img src="/images/arrow_right.svg" alt="Home"></a>
       </figure>
@@ -41,7 +41,7 @@
 
    <!-- Mijn collectie -->
 
-   <h3>Mijn collectie</h3>
+   <h3>Nog niet ontdekte kroegenc</h3>
 
    <section>
 
