--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,6 +1,7 @@
    <nav>
       <ul>
          <li><a href="../"><img src="/images/home.svg" alt="Ontdekken"></a></li>
+         <li><a href="../discover"><img src="/images/home.svg" alt="Likes"></a></li>
          <li><a href="../likes"><img src="/images/home.svg" alt="Likes"></a></li>
          <li><a href="../profile"><img src="/images/profile.svg" alt="Profile"></a></li>
       </ul>
