Like functie werkend gekregen

--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -23,7 +23,7 @@
     <h3><%= likedBar.attributes %></h3>
     <p><%= likedBar.currentStatus %></p>
     <p><%= likedBar.reviewCount %></p>
-   
+    <img src="<%= likedBar.imgUrl %> " alt="<%= likedBar.title %> " />
     <% }); %>
   </main>
 </body>
