--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,8 +1,8 @@
    <nav>
       <ul>
-         <li><a href="../"><img src="/images/home.svg" alt="Ontdekken"></a></li>
-         <li><a href="../discover"><img src="/images/home.svg" alt="Likes"></a></li>
-         <li><a href="../likes"><img src="/images/home.svg" alt="Likes"></a></li>
-         <li><a href="../profile"><img src="/images/profile.svg" alt="Profile"></a></li>
+         <li><a href="../discover"><img src="/images/nav_beer.svg" alt="Ontdekken">Kroegen</a></li>
+         <li><a href="../likes"><img src="/images/nav_favorites.svg" alt="Likes">Geliked</a></li>
+         <li><a href="../cocktails"><img src="/images/nav_cocktail.svg" alt="Likes">Generator</a></li>
+         <li><a href="../profile"><img src="/images/nav_profile.svg" alt="Profile">Profiel</a></li>
       </ul>
    </nav>
