--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,7 +6,7 @@
 
    <article>
       <h2>Instellingen</h2>       
-      <figure></figure>
+      <figure><img src="/images/placeholder_profile.jpg" alt=""></figure>
    </article>
 
 </header>
