--- a/views/profile_overview.ejs
+++ b/views/profile_overview.ejs
@@ -14,7 +14,7 @@
    <section>
 
       <figure>
-         <img src="" alt="">
+         <img src="/images/placeholder_profile.jpg" alt="">
       </figure>
 
       <article>
@@ -24,7 +24,6 @@
                <p><%= email %></p>
             </span>
 
-            <img src="/images/arrow_right_grey.svg" alt="Pijl naar rechts">
          </a>
       </article>
 
@@ -35,7 +34,6 @@
                <p>+31 6 00 00 00 00</p>
             </span>
 
-            <img src="/images/arrow_right_grey.svg" alt="Pijl naar rechts">
          </a>
       </article>
 
@@ -46,7 +44,6 @@
                <p>Wachtwoord veranderen</p>
             </span>
 
-            <img src="/images/arrow_right_grey.svg" alt="Pijl naar rechts">
          </a>
       </article>
 
@@ -57,7 +54,6 @@
                <p>Nederland</p>
             </span>
 
-            <img src="/images/arrow_right_grey.svg" alt="Pijl naar rechts">
          </a>
       </article>
       
