--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -127,14 +127,18 @@ header article {
 }
 
 header article figure {
+    overflow: hidden;
+
     width: 4rem;
     height: 4rem;
 
     border-radius: 1em;
-
-    background-color: var(--green);
 }
 
+header article figure img {
+    width: 100%;
+    height: 100%;
+}
 
 
 main section {
@@ -175,6 +179,8 @@ main section figure {
 main section figure img {
     margin: 0;
     padding: 0;
+
+    width: 100%;
 }
 
 main section article {
