--- a/public/css/sign_up.css
+++ b/public/css/sign_up.css
@@ -2,82 +2,143 @@
 
 
 
+html {
+   height: 100%;
+}
+
+body {
+   background-color: var(--beer-light);
+}
+
+
 .content_center_aligned {
-   height: 97.5vh;
 
    display: flex;
    flex-direction: column;
    justify-content: center;
 }
+
 
 section {
+   padding: 4rem 1.5rem 0 1.5rem;
+
    display: flex;
    flex-direction: column;
    justify-content: center;
-
-   text-align: center;
 }
 
-section h1 {
-   margin-bottom: 0.5rem;
+
+section h2 {
+   margin-bottom: 1rem;
+
+   font-family: var(--font);
+   font-weight: 400;
+
+   color: var(--body-text-color);
+}
+
+
+form label {
+   padding: 0;
+   margin: 1rem 0 0.5rem 0;
+
+   font-family: var(--font);
+
+   color: var(--body-text-color);
+}
+
+
+form input[type="email"], input[type="password"], input[type="text"] {
+   height: 2.5rem;
 
    font-family: var(--font);
    font-weight: 500;
+
+   border: 0.15rem solid var(--border-color);
+   border-radius: 0.5rem;
+
+   color: var(--body-text-color);
+   background-color: var(--beer-foam);
 }
 
-section p {
-   font-size: 1.1rem;
-
-   color: var(--secondary-text-color);
+form input:nth-of-type(2), input:nth-of-type(4) {
+   margin-bottom: 2rem;
 }
 
+select {
+   padding: 0;
+   margin: 0;
 
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+   -webkit-appearance: none;
+   -moz-appearance: none;
+}
 
-/* Formulier */
-
-form input {
-   padding: 1rem;
+form select {
+   height: 2.5rem;
 
    font-family: var(--font);
    font-weight: 500;
 
-   border: 0.1rem solid var(--border-color);
-   border-radius: 1.25rem;
+   border: 0.15rem solid var(--border-color);
+   border-radius: 0.5rem;
+
+   background-color: var(--beer-foam);
+
+   background-image: url('../images/select_arrow_down.svg');
+   background-position: calc(100% - 1.5rem) calc(0.7rem + 0.1rem);
+   background-size: 1rem;
+   background-repeat: no-repeat;
+}
+
+form input[type="submit"] {
+   font-size: 1rem;
+
+   padding: 1rem 4rem;
+   margin-top: 2rem;
+
+   align-self: center;
+
+   border: none;
+   border-radius: 0.5rem;
+
+   color: var(--white);
+   background-color: var(--primary-button-color);
 }
 
 
-
-span:first-of-type {
+form span {
    margin-top: 1rem;
 
    font-family: var(--font);
    font-size: 0.95rem; 
 
-   font-weight: 500;
+   color: var(--body-text-color);
+}
 
-   color: var(--primary-text-color);
+
+/* Wachtwoord vergeten */
+form span:first-of-type {
+   font-weight: 500;
 
    align-self: flex-end;
 }
 
+
+
+/* Nog geen account */
 form span:last-of-type {
-   font-family: var(--font);
    font-weight: 400;
-
-   font-size: 0.95rem;
-
-   color: var(--primary-text-color);
-
-   margin-top: 1rem;
 
    align-self: center;
 }
 
+
+/* Nog geen account link */
 form span:last-of-type a {
    font-weight: 500;
 
-   background: linear-gradient(var(--dark-grey), var(--dark-grey)) bottom / 0 .1em no-repeat;
-
-   background-position: 100% 100%;
-   background-size: 100% 6.5%;
+   color: var(--body-text-color);
 }
