--- a/views/log_in.ejs
+++ b/views/log_in.ejs
@@ -1,42 +1,39 @@
 
 
+   
 
+<%- include('partials/header.ejs') %>
 
 
 <div class="content_center_aligned">
 
    <section>
 
-         <!-- Introductie -->
-         <h1>Hey daar!</h1>
+      <!-- Introductie -->
+      <h2>Inloggen</h2>
 
-         <p> 
-            Welkom terug we hebben <br> je enorm gemist!
-         </p>
+      <!-- Formulier -->
+      <form action="" method="POST">
+
+         <label for="username">Gebruikersnaam</label>
+         <input type="text" name="username" id="username" placeholder="" />
+
+         <label for="email">Email</label>
+         <input type="email" name="email" id="email" placeholder="" required />
+         <label for="password">Wachtwoord</label>
+         <input type="password" name="password" id="password" placeholder="" required />
+
+         <span><a href="#"></a>Wachtwoord vergeten</span>
+
+            <!-- Inloggen -->
+         <input type="submit" value="Inloggen">
+
+            <!-- Registreren -->
+         <span>Nog geen account? <a href="/sign_up">Registreren</a></span>
+
+      </form>
 
    </section>
-
-
-   <!-- Formulier -->
-   <form action="" method="POST">
-
-        <label for="username"></label>
-        <input type="text" name="username" id="username" placeholder="Gebruikersnaam" />
-
-        <label for="email"></label>
-        <input type="email" name="email" id="email" placeholder="Email" required />
-        <label for="password"></label>
-        <input type="password" name="password" id="password" placeholder="Wachtwoord" required />
-
-      <span><a href="#"></a>Wachtwoord vergeten</span>
-
-         <!-- Inloggen -->
-      <input type="submit" value="Log in">
-
-         <!-- Registreren -->
-      <span>Nog geen account? <a href="/sign_up">Registreren</a></span>
-
-   </form>
 
 </div>
 
