Toevoegen stijling, cocktail generator, stijling probleem opgelost, team overleg

--- a/public/css/discover.css
+++ b/public/css/discover.css
@@ -110,6 +110,10 @@ main section article button {
 
    top: 0.5rem;
    right: 0.5rem;
+
+   outline: none;
+   border: none;
+   background: none;
 }
 
 /* Thumbnail kroeg */
