--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -24,7 +24,7 @@
       <form>
          <article>
       
-            <button type="submit">❤️</button>
+            <!-- <button type="submit">X</button> -->
       
             <figure> 
                <img src="<%= likedBar.imgUrl %>" alt="">
