--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -61,7 +61,7 @@ body {
 
 h1 {
     font-family: var(--font);
-    font-size: 64px;
+    font-size: 4rem;
 
     text-transform: uppercase;
 }
@@ -83,9 +83,6 @@ h4 {
 p {
     font-family: var(--font);
     font-size: var(--body-font-size);
-}
-
-a {
 }
 
 figure {
@@ -193,6 +190,12 @@ nav ul li a {
     text-decoration: none;
 
     color: var(--body-text-color);
+    
+    filter: grayscale(100%);
+}
+
+.active {
+    filter: grayscale(0%);
 }
 
 nav ul li a img {
