--- a/public/css/discover.css
+++ b/public/css/discover.css
@@ -91,6 +91,7 @@ main section h2 {
    color: var(--body-text-color);
 }
 
+/* Kaarten kroeg */
 main section form > article {
    position: relative;
 
