--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -21,9 +21,9 @@
    
       <% likedBars.forEach(likedBar => { %>
            
-      <form>
+      <form method="post" action="/favorites/delete">
          <article>
-      
+            <input type="hidden" name="" value="<%= likedBar._id %>">
             <button type="submit">❤️</button>
       
             <figure> 
