Naast de titel ook bijbehorende afbeelding toegevoegd aan de cocktail generator 🍸

--- a/views/cocktails.ejs
+++ b/views/cocktails.ejs
@@ -25,7 +25,7 @@
       <article>
 
          <figure> 
-            <img src="https:\/\/www.thecocktaildb.com\/images\/media\/drink\/2ahv791504352433.jpg" alt="">
+            <img src="https:\/\/www.thecocktaildb.com\/images\/media\/drink\/2ahv791504352433.jpg" class="cocktailThumbnail" alt="">
          </figure>
 
 
