--- a/views/discover.ejs
+++ b/views/discover.ejs
@@ -2,6 +2,9 @@
 
 
 
+
+
+
 <%- include('partials/header.ejs') %>
 
 <header>
@@ -35,7 +38,7 @@
             <button type="submit"><img src="/images/filled_heart.svg" alt="like"></button>
       
             <figure> 
-               <img src="/images/sneaker_1.png" data-src="<%= bar.imgUrl %>" alt="" class="lazy">
+               <img src="/images/lazily_placeholder.png" data-src="<%= bar.imgUrl %>" alt="" class="lazy">
             </figure>
 
             <article>
