--- a/views/discover.ejs
+++ b/views/discover.ejs
@@ -4,23 +4,23 @@
 
 <%- include('partials/header.ejs') %>
 
-<header>
+<section class="welkomTekst">
 
-   <article>
+   <div>
       <h2> Hey, <%= name %> </h2>
       <p> Ontdek kroegen in jouw buurt!</p>
-   </article>
+   </div>
 
    <figure>
       <img src="/images/placeholder_profile.jpg" alt="">
    </figure>
 
-</header>
+</section>
 
 
 
 <!-- Ontdekken -->
-<main>
+<main class="mainDiscover">
 
    <section>
 
