--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,9 @@
 
 
 
-<div class="centered_aligned_content">
+<div class="centered_aligned_content zeroStateWrapper">
 
-   <header> 
+   <header class="zeroStateHeader"> 
 
       <p> Opzoek naar drank? voor de </p>
       <h1>Kroeg!</h1>
