--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -4,16 +4,9 @@
 
 <%- include('partials/header.ejs') %>
 
-<header>
-
-  <!--  -->
-
-</header>
-
-
 
 <!-- Ontdekken -->
-<main>
+<main class="mainLikes">
 
    <section>
 
