--- a/views/log_in.ejs
+++ b/views/log_in.ejs
@@ -5,9 +5,9 @@
 <%- include('partials/header.ejs') %>
 
 
-<div class="content_center_aligned">
+<div class="content_center_aligned logInWrapper">
 
-   <section>
+   <section class="logIn">
 
       <!-- Introductie -->
       <h2>Inloggen</h2>
