--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,7 +2,7 @@
 
 
 
-<header>
+<header class="profile">
 
    <article>
       <h2>Instellingen</h2>       
@@ -12,7 +12,7 @@
 </header>
 
 
-<main>
+<main class="mainProfile">
 
    <section>
 
