--- a/views/profile_country.ejs
+++ b/views/profile_country.ejs
@@ -2,7 +2,7 @@
 
 
 
-<header>
+<header class="profileCountry">
 
    <article>
       <a href="profile_overview"><img src="/images/arrow_left.svg" alt="Terug"></a><h2>Land</h2>
@@ -11,7 +11,7 @@
 </header>
 
 
-<main>
+<main class="mainCountry">
 
    <section>
       <select name="land" id="landen">
