--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -5,9 +5,9 @@
 <%- include('partials/header.ejs') %>
 
 
-<div class="content_center_aligned">
+<div class="content_center_aligned signUpWrapper">
 
-   <section>
+   <section class="signUp">
      
       <!-- Introductie -->
       <h2>Registreren</h2>
@@ -28,9 +28,7 @@
          <input type="password" name="repeat_password" id="repeat_password" placeholder="" required />
 
          <label for="residence">Woonplaats</label>
-         <select name="residence" id="countries">
-
-            </select>
+         <select name="residence" id="countries"></select>
 
          <input type="submit" value="Registreren"/>
 
