--- a/views/layouts/discover_layout.ejs
+++ b/views/layouts/discover_layout.ejs
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- title %></title>
 
-    <link rel="stylesheet" href="/css/discover.css">
-    <link rel="stylesheet" href="/css/stylesheet.css">
+    <link rel="stylesheet" href="css/compiledCSS/main.css">
 </head>
 
 
-<body>
+<body class="bodyDiscover">
 
 
     <%- body %>
