--- a/views/layouts/profile.ejs
+++ b/views/layouts/profile.ejs
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- title %></title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet"> -->
 
-    <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="css/compiledCSS/main.css">
 
 
 </head>
-<body>
+<body class="bodyProfile">
      
     <%- body %>
 
