--- a/views/profile_overview.ejs
+++ b/views/profile_overview.ejs
@@ -2,14 +2,14 @@
 
 
 
-<header>
+<header class="profileOverview">
    <article>
       <a href="profile"><img src="/images/arrow_left.svg" alt="Terug"></a><h2>Profiel bewerken</h2>
    </article>
 </header>
 
 
-<main>
+<main class="mainOverview">
 
    <section>
 
