--- a/views/profile_password.ejs
+++ b/views/profile_password.ejs
@@ -1,14 +1,14 @@
 
 
 
-<header>
+<header class="profilePassword">
    <article>
       <a href="profile_overview"><img src="/images/arrow_left.svg" alt="Terug"></a> <h2>Wachtwoord</h2>
    </article>
 </header>
 
 
-<main>
+<main class="mainPassword">
    
    <form>
       
