--- a/views/layouts/include_nav.ejs
+++ b/views/layouts/include_nav.ejs
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- title %></title>
 
-    <link rel="stylesheet" href="css/<%-title %>.css">
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/compiledCSS/main.css">
 </head>
 
 
