--- a/views/layouts/profile_forms.ejs
+++ b/views/layouts/profile_forms.ejs
@@ -10,8 +10,7 @@
 
     <title><%- title %></title>
 
-    <link rel="stylesheet" href="css/profile_forms.css">
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/compiledCSS/main.css">
 
 </head>
 
