--- a/views/layouts/profile_forms_country.ejs
+++ b/views/layouts/profile_forms_country.ejs
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/profile_forms.css">
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/compiledCSS/main.css">
     
 </head>
 <body>
